--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "format:fix": "prettier . --write"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
+    "framer-motion": "^6.5.1",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
